Fix image clipping

--- a/index-assets/index.css
+++ b/index-assets/index.css
@@ -9,11 +9,11 @@ body {
 }
 
 h1 {
-	margin-top: 75px;
+	padding-top: 75px;
 	font-size: 4rem;
 	font-weight: 300;
 	color: #e74c3c;
-	margin-bottom: 0;
+	margin: 0;
 }
 
 h1:before {
